# kengine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  flake.nix  perf.sh  run.sh
artifacts/: no_rect.p6
include/: BVH.h  Camera.h  Distribution.h  Geometry.h  Image.h  Intersection.h  Light.h  Object.h  Primitive.h  Primitives.h  Quaternion.h  Ray.h  Rnd.h  Scene.h  SceneBuilder.h  Vec3.h
include/Object/: Geometry.h  Material.h
include/Primitives/: AABB.h  Intersection.h  Mat3.h  Mat4.h  Quaternion.h  Ray.h  Vec3.h
scenes/: example.cmds  no_rect.cmds
src/: BVH.cpp  Geometry.cpp  Light.cpp  Quaternion.cpp  Rnd.cpp  Scene.cpp  main.cpp
src/Distributions/: Cosine.cpp  Mix.cpp  Uniform.cpp
src/Distributions/Light/: Box.cpp  Ellipsoid.cpp  Triangle.cpp
src/Geometry/: Box.cpp  Ellipsoid.cpp  Plane.cpp
src/Light/: Direct.cpp  Point.cpp
src/Object/: Geometry.cpp  Material.cpp
src/Object/Geometry/: Box.cpp  Ellipsoid.cpp  Plane.cpp  Triangle.cpp
